--- a/Website/home.html
+++ b/Website/home.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+
 
 <head>
     <title>Bathroom Scheduler</title>
     <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+
     <meta name="author" content="">
+    <meta name="description" content="">
 
     <link rel="stylesheet" href="home.css">
-    <script src="home.js"></script>
 </head>
 
 <body>
