--- a/Website/schedule/schedule.html
+++ b/Website/schedule/schedule.html
@@ -13,25 +13,27 @@
     <meta name="description" content="A website for scheduling bathroom time using IoT">
     <meta name="keywords" content="bathroom, schedule, internet of things, iot">
 
-    <link rel="stylesheet" href="universal-style.css">
-    <link rel="stylesheet" href="home-style.css">
+    <link rel="stylesheet" href="../universal-style.css">
+    <link rel="stylesheet" href="schedule-style.css">
+    <script src="../environment.js"></script>
+    <script src="schedule-script.js"></script>
 </head>
 
 <body>
     <div id="wrapper">
         <header>
-            <h1><a href="home.html">IoT Bathroom Scheduler</a></h1>
+            <h1><a href="../home.html">IoT Bathroom Scheduler</a></h1>
             <nav>
                 <ul id="nav-list">
-                    <li class="nav-item"><a href="bathroom-stats/bathroom-stats.html">Bathroom Stats</a></li>
-                    <li class="nav-item"><a href="schedule/schedule.html">Schedule</a></li>
+                    <li class="nav-item"><a href="../bathroom-stats/bathroom-stats.html">Bathroom Stats</a></li>
+                    <li class="nav-item"><a href="schedule.html">Schedule</a></li>
                 </ul>
             </nav>
         </header>
 
         <main>
-            <h2>Welcome!</h2>
-            <p>This website can be used to interact with your IoT Bathroom Scheduler.</p>
+            <h2>Schedule</h2>
+            <p>Temp</p>
         </main>
 
         <footer>
