Fixed conflicting time error, improved current schedule

--- a/Website/schedule/schedule.html
+++ b/Website/schedule/schedule.html
@@ -73,8 +73,10 @@
             <section>
                 <h3>Current Schedule</h3>
                 <p class="fine-print">Schedule updated every one minute</p>
-
+                
                 <ul id="current-schedule-list"></ul>
+
+                <p id="current-schedule-result">Please wait...</p>
             </section>
         </main>
 
