Added display of fahrenheit

--- a/Website/bathroom-stats/bathroom-stats.html
+++ b/Website/bathroom-stats/bathroom-stats.html
@@ -43,7 +43,8 @@
             <p id="display-in-use">Please wait...</p>
 
             <h3>Temperature</h3>
-            <p id="display-temperature">Please wait...</p>
+            <p id="display-temperature-c">Please wait...</p>
+            <p id="display-temperature-f">Please wait...</p>
 
             <h3>Humidity</h3>
             <p id="display-humidity">Please wait...</p>
