Add pictures to website

--- a/Website/home.html
+++ b/Website/home.html
@@ -33,6 +33,10 @@
         <main>
             <h2>Welcome!</h2>
             <p>This website can be used to interact with your IoT Bathroom Scheduler.</p>
+            <div id="images-div">
+                <img src="images/InsideBathroomArgon.jpg" alt="Inside bathroom argon">
+                <img src="images/OutsideBathroomArgon.jpg" alt="Outside bathroom argon">
+            </div>
         </main>
 
         <footer>
